[tool.poetry]
name = "ac_avatar"
version = "0.1.0"
description = "心情不好？来换个头像吧"
authors = ["ehco1996 <zh19960202@gmail.com>"]
license = "GPLV3"

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.23.0"
black = "^21.7b0"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true