[tool.poetry]
authors = ["ehco1996 <zh19960202@gmail.com>"]
description = "心情不好？来换个头像吧"
include = [
  "LICENSE",
]
license = "GPLV3"
name = "ac_avatar"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Telethon = "^1.23.0"
autoflake = "^1.4"
black = "^21.7b0"
isort = "^5.9.3"
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
